RESOLVED FIXED125016
[Cocoa] ResourceError encoding drops NSURL-valued keys in the NSError’s userInfo, including NSErrorFailingURLKey
https://bugs.webkit.org/show_bug.cgi?id=125016
Summary [Cocoa] ResourceError encoding drops NSURL-valued keys in the NSError’s userI...
mitz
Reported 2013-11-29 10:33:22 PST
<rdar://problem/15560240> ArgumentCoder<ResourceError>::encodePlatformData() encodes only string-valued keys in the NSError’s userInfo dictionary. In particular, it doesn’t encode the value of NSErrorFailingURLKey, which is an NSURL.
Attachments
Encode all string- and URL-valued keys in the user info dictionary (4.07 KB, patch)
2013-11-29 18:56 PST, mitz
andersca: review+
mitz
Comment 1 2013-11-29 18:56:42 PST
Created attachment 218083 [details] Encode all string- and URL-valued keys in the user info dictionary
mitz
Comment 2 2013-11-30 10:47:21 PST
Note You need to log in before you can comment on or make changes to this bug.