<rdar://problem/15560240> ResourceError encoding drops NSURL-valued keys in the NSError’s userInfo, including NSErrorFailingURLKey https://bugs.webkit.org/show_bug.cgi?id=125016

Reviewed by Anders “happy name day” Carlsson.

* Shared/mac/WebCoreArgumentCodersMac.mm:
(CoreIPC::::encodePlatformData): Encode all string- and URL-valued keys as a dictionary.
(CoreIPC::::decodePlatformData): Decode user info as a dictionary.



Canonical link: https://commits.webkit.org/143138@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159887 268f45cc-cd09-0410-ab3c-d52691b4dbfc